--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./secciones/nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="./secciones/menu.html">Menu</a>
                 </li>
                 <li class="nav-item">
@@ -63,7 +66,7 @@
     </section>
 
     <section class="imagenFront">
-      <img src="./imagenes/trago4.jpg" alt="">
+      <img src="./imagenes/FondoDina.JPG" alt="">
     </section>
 
 
@@ -91,6 +94,9 @@
             <ul class="list-unstyled mb-0">
               <li>
                 <a href="./index.html" class="text-black">Inicio</a>
+              </li>
+              <li>
+                <a href="./secciones/nosotros.html" class="text-black">Nosotros</a>
               </li>
               <li>
                 <a href="./secciones/menu.html" class="text-black">Menu</a>
