--- a/secciones/contactos.html
+++ b/secciones/contactos.html
@@ -29,6 +29,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="./menu.html">Menu</a>
                 </li>
                 <li class="nav-item">
@@ -99,6 +102,9 @@
           <ul class="list-unstyled mb-0">
             <li>
               <a href="../index.html" class="text-black">Inicio</a>
+            </li>
+            <li>
+              <a href="./nosotros.html" class="text-black">Nosotros</a>
             </li>
             <li>
               <a href="./menu.html" class="text-black">Menu</a>
