--- a/secciones/contactos.html
+++ b/secciones/contactos.html
@@ -17,7 +17,7 @@
     <div class="contactosHeader">
       <header>
         <div class="logo">
-          <img src="https://via.placeholder.com/50" alt="">
+          <img class= "logo" src="../imagenes/logov2.JPG" alt="">
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
@@ -49,29 +49,32 @@
 
     <main class="contactosMain">
       <section class="container">
-        <div class="row">
-          <div class="mb-3 text-white">
-            <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-            <input type="nombre" class="form-control" id="exampleFormControlInput1" placeholder="ingresa tu nombre">
+        <div class="col-sm-6">
+          <div class="row">
+            <div class="mb-3 text-white">
+              <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+              <input type="nombre" class="form-control" id="exampleFormControlInput1" placeholder="ingresa tu nombre">
+            </div>
+            <div class="mb-3 text-white">
+              <label for="exampleFormControlInput1" class="form-label">Apellido</label>
+              <input type="apellido" class="form-control" id="exampleFormControlInput1" placeholder="ingresa tu apellido">
+            </div>
+            <div class="mb-3 text-white">
+              <label for="exampleFormControlInput1" class="form-label">Telefono</label>
+              <input type="telefono" class="form-control" id="exampleFormControlInput1" placeholder="+54-11-1111-1111">
+            </div>
+            <div class="mb-3 text-white">
+              <label for="exampleFormControlInput1" class="form-label">Correo Electronico</label>
+              <input type="correo" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
+            </div>
+            <div class="mb-3 text-white">
+              <label for="exampleFormControlTextarea1" class="form-label">Comentarios</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
           </div>
-          <div class="mb-3 text-white">
-            <label for="exampleFormControlInput1" class="form-label">Apellido</label>
-            <input type="apellido" class="form-control" id="exampleFormControlInput1" placeholder="ingresa tu apellido">
-          </div>
-          <div class="mb-3 text-white">
-            <label for="exampleFormControlInput1" class="form-label">Telefono</label>
-            <input type="telefono" class="form-control" id="exampleFormControlInput1" placeholder="+54-11-1111-1111">
-          </div>
-          <div class="mb-3 text-white">
-            <label for="exampleFormControlInput1" class="form-label">Correo Electronico</label>
-            <input type="correo" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
-          </div>
-          <div class="mb-3 text-white">
-            <label for="exampleFormControlTextarea1" class="form-label">Comentarios</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
+          <button type="submit" class="btn btn-primary">Enviar</button>
         </div>
-        <div class="col">
+        <div class="col-sm-6">
 
         </div>
 
