--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -18,7 +18,7 @@
     <div class="nosotrosHeader">
       <header>
         <div class="logo">
-          <img src="https://via.placeholder.com/50" alt="">
+          <img class= "logo" src="../imagenes/logov2.JPG" alt="">
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
@@ -57,7 +57,8 @@
       <div class="nosotrosDecrip">
         <h1 class="nosotrosH1">Nosotros</h1>
         <p class="nosotrosP">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, corporis. Molestiae assumenda accusantium, inventore nisi omnis et similique, ducimus ullam sapiente eligendi tenetur fuga ipsam dolorum laboriosam eos fugit quo?
+          Somos Dina, bar de vinos organicos traidos directamente de los mas finos rincones de nuestros pais.
+              Encontranos en la ciudad de Campana, Buenos Aires.
         </p>
       </div>
     </main>
