--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="mainHeader">
       <header>
         <div class="logo">
-          <img class="logo" src="https://via.placeholder.com/50" alt="">
+          <img class="logo" src="./imagenes/logov2.JPG" alt="">
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
