--- a/secciones/galeria.html
+++ b/secciones/galeria.html
@@ -17,7 +17,7 @@
     <div class="galeriaHeader">
       <header>
         <div class="logo">
-          <img src="https://via.placeholder.com/50" alt="">
+          <img class= "logo" src="../imagenes/logov2.JPG" alt="">
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
@@ -52,6 +52,8 @@
       <div class="item item2 box"></div>
       <div class="item item3 box"></div>
       <div class="item item4 box"></div>
+      <div class="item item5 box"></div>
+      <div class="item item6 box"></div>
     </main>
 
 <!-- Footer -->
