--- a/secciones/menu.html
+++ b/secciones/menu.html
@@ -18,7 +18,7 @@
     <div class="menuHeader">
       <header>
         <div class="logo">
-          <img src="https://via.placeholder.com/50" alt="">
+          <img class= "logo" src="../imagenes/logov2.JPG" alt="">
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
@@ -56,13 +56,19 @@
         <div class="textoCocktail">
           <div class="cartaCocktails">
             <h1>Nuestros Cocktails</h1>
-            <h2>x1</h2>
-            <h2>x2</h2>
-            <h2>x3</h2>
-            <h1>Nuestos Vinos</h1>
-            <h2>y1</h2>
-            <h2>y2</h2>
-            <h2>y3</h2>
+            <h2>El Famoso Dina: Ron Bacardi blano, Fernet Branca menta, almibar de romero, jugo de limon y juego de naranja</h2>
+            <h2>El Empalagoso: Vodka Sernova, Baileys, crema y chocolate rallado</h2>
+            <h2>Al Capone: Whisky, Cynar, lima y jugo de pomelo rosado</h2>
+            <h2>Dinaso: Whisky, limon, miel y bitter angostura</h2>
+            <h2>Sinopharm: Vodka de coco, gin, ron blanco, jugo de lima y almibar de jengibre, gaseosa de lima limon con una dosis de blue curacao</h2>
+            <h2>Elixir: Gin, licor de frutilla, jugo de limon, almibar de romero, agua tonica y romero, con una dosis de Hodlmoser</h2>
+            <h1>Nuestos Tonicos</h1>
+            <h2>Gin Sinestesia, agua tonica, menta y albahaca</h2>
+            <h2>Gin Sinestesia, agua tonica, lima, limon y romer</h2>
+            <h2>Gin Ciervo de los Pantanos, vermut Alfosina Rose, agua tonica y pomelo</h2>
+            <h2>Gin kalmar de hibiscus macerado en frutos rojos, agua tonica, frutillas y pimienta rosa</h2>
+            <h2>Campari, agua tonica, jugo de limon y media rodaja de limon</h2>
+            <h2>Cynar, Aperol, agua tonica y pomelo</h2>
           </div>
         </div>
       </div>
@@ -73,9 +79,18 @@
         <div class="textoPlatos">
           <div class="cartaPlatos">
             <h1>Nuestros Platos</h1>
-            <h2>x1</h2>
-            <h2>x2</h2>
-            <h2>x3</h2>
+            <h2>Platitos Quesos: Brie, de campo, pategras, azul y aceitunas</h2>
+            <h2>Platito Fiabres: Jamón Crudo, lomito horneado, salame</h2>
+            <h2>Brusquetas Veggies: Palta, Crema de Berenjena asada y pico de gallo / Pate de Zanahoria, Brotes de rabanito y Tomate</h2>
+            <h2>Brusquetas: Jamón crudo, Queso Brie / Hongos, Queso Azul, Rucula y Parmesano</h2>
+            <h2>Empandas Salteñas: 2 Empanadas de carbon, con relleno de Carne</h2>
+            <h2>Empanadas de Hongos: 2 Empanadas de hongos, espinaca, puerro y queso</h2>
+            <h2>Provoleta Margaretta: Portobellos, Tomates Secos, Emulsión de rúcula </h2>
+            <h2>Brocolo Sweet Chili: Brócoli mantequilla de manil, miso, siracha</h2>
+            <h2>Sciacciata Aguacate: Palta, Rúcula, Tomates Secos, Brie, Pesto</h2>
+            <h2>Ensalada Langostinos: Hojas Verdes, Tomates Secos, Langostinos, Parmesano, Semillas Emulsion de Acceto</h2>
+            <h2>Malfattis: Malfattis de Espinaca, ricota, muzzarella, parmesano, salteados  en tomates cherries y romero</h2>
+            <h2>Bondolio Malbec: Bondiola braseada en vino, coccion de 3 hs, acompanado de  papas rusticas</h2>
           </div>
         </div>
       </div>
