--- a/secciones/contactos.html
+++ b/secciones/contactos.html
@@ -51,28 +51,28 @@
       <section class="container">
         <div class="col-sm-6">
           <div class="row">
-            <div class="mb-3 text-white">
+            <div class="mb-3 text-black">
               <label for="exampleFormControlInput1" class="form-label">Nombre</label>
               <input type="nombre" class="form-control" id="exampleFormControlInput1" placeholder="ingresa tu nombre">
             </div>
-            <div class="mb-3 text-white">
+            <div class="mb-3 text-black">
               <label for="exampleFormControlInput1" class="form-label">Apellido</label>
               <input type="apellido" class="form-control" id="exampleFormControlInput1" placeholder="ingresa tu apellido">
             </div>
-            <div class="mb-3 text-white">
+            <div class="mb-3 text-black">
               <label for="exampleFormControlInput1" class="form-label">Telefono</label>
               <input type="telefono" class="form-control" id="exampleFormControlInput1" placeholder="+54-11-1111-1111">
             </div>
-            <div class="mb-3 text-white">
+            <div class="mb-3 text-black">
               <label for="exampleFormControlInput1" class="form-label">Correo Electronico</label>
               <input type="correo" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
             </div>
-            <div class="mb-3 text-white">
+            <div class="mb-3 text-black">
               <label for="exampleFormControlTextarea1" class="form-label">Comentarios</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
           </div>
-          <button type="submit" class="btn btn-primary">Enviar</button>
+          <button type="submit" class="btn btn-primary text-black">Enviar</button>
         </div>
         <div class="col-sm-6">
 
@@ -82,7 +82,7 @@
     </main>
 
   <!-- Footer -->
-  <footer class="bg-secondary text-black text-center text-md-start bg-secondary p-2 text-dark bg-opacity-10">
+  <footer class="bg-secondary text-black text-center text-md-start bg-secondary p-2 text-dark bg-opacity-50">
     <!-- Grid container -->
     <div class="container p-4">
       <!--Grid row-->
