--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="pagina web de un bar en la ciudad de campana. Venta de vinos, tragos y comida">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./estilos/style.css">
@@ -49,14 +50,9 @@
 
     <main class="mainIndex">
         <div class="textoDina">
-        <h1>DINA WinerBar</h1>
-      </div>
-      <div class="parrafoDina">
-        <p>
-          Somos Dina Wine Bar, veni a probar nuestros vinos de origen organico. Unicos y con un maridaje perfecto de
-          nuestra carta
-        </p>
-      </div>    
+          <!-- <h1>DINA WinerBar</h1> -->
+          
+        </div>
     </main>
 
     <section class="mapa">
@@ -66,12 +62,12 @@
     </section>
 
     <section class="imagenFront">
-      <img src="./imagenes/FondoDina.JPG" alt="">
+      <img src="./imagenes/Foto7.JPG" alt="">
     </section>
 
 
     <!-- Footer -->
-    <footer class="bg-secondary text-black text-center text-md-start bg-secondary p-2 text-dark bg-opacity-10">
+    <footer class="bg-secondary text-black text-center text-md-start bg-secondary p-2 text-dark bg-opacity-50">
       <!-- Grid container -->
       <div class="container p-4">
         <!--Grid row-->
