--- a/secciones/contactos.html
+++ b/secciones/contactos.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Contactanos, somos Dina Wine Bar">
+  <meta name="keywords" content="Restaurant, Vinos, Cocktails, Tragos, Comida, Campana, Buenos Aires, Gourmet">
   <link rel="stylesheet" href="../estilos/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <title>dinaWineBar</title>
+  <title>Contactanos, Bar de Vinos Dina Campana</title>
 </head>
 
 <body>
