--- a/secciones/contactos.html
+++ b/secciones/contactos.html
@@ -18,12 +18,9 @@
   <div class="containerContactos">
     <div class="contactosHeader">
       <header>
-        <div class="logo">
-          <img class= "logo" src="../imagenes/logov2.JPG" alt="">
-        </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">Inicio</a>
+            <a class="navbar-brand" href="../index.html"><img class= "logo" src="../imagenes/logov2.JPG" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
