--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -19,12 +19,9 @@
 
     <div class="nosotrosHeader">
       <header>
-        <div class="logo">
-          <img class= "logo" src="../imagenes/logov2.JPG" alt="">
-        </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">Inicio</a>
+            <a class="navbar-brand" href="../index.html"><img class= "logo" src="../imagenes/logov2.JPG" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -61,6 +58,14 @@
         <p class="nosotrosP">
           Somos Dina, bar de vinos organicos traidos directamente de los mas finos rincones de nuestros pais.
               Encontranos en la ciudad de Campana, Buenos Aires.
+        </p>
+      <div class="nosotrosConocenos">
+        <h1 class="conocenos text-black">Veni a Conocernos:</h1>
+        <p class="parrafo1">
+          Jueves-Viernes-Sábados y Domingos 20:00hs
+        </p>
+        <p class="parrafo1">
+          Jean Jaures 823, Campana, BA
         </p>
       </div>
     </main>
