--- a/secciones/menu.html
+++ b/secciones/menu.html
@@ -78,14 +78,14 @@
         <div class="textoPlatos">
           <div class="cartaPlatos">
             <h1>Nuestros Platos</h1>
-            <h2>Platito Quesos: Brie, de campo, pategras, azul y aceitunas</h2>
+            <h2>Platito Quesos: Brie, queso de campo, pategras, azul y aceitunas</h2>
             <h2>Platito Fiabres: Jamón Crudo, lomito horneado, salame</h2>
             <h2>Brusquetas Veggies: Palta, Crema de Berenjena asada y pico de gallo / Pate de Zanahoria, Brotes de rabanito y Tomate</h2>
             <h2>Brusquetas: Jamón crudo, Queso Brie / Hongos, Queso Azul, Rucula y Parmesano</h2>
             <h2>Empandas Salteñas: 2 Empanadas de carbon, con relleno de Carne</h2>
             <h2>Empanadas de Hongos: 2 Empanadas de hongos, espinaca, puerro y queso</h2>
             <h2>Provoleta Margaretta: Portobellos, Tomates Secos, Emulsión de rúcula </h2>
-            <h2>Brocoli Sweet Chili: Brócoli mantequilla de mani, miso, siracha</h2>
+            <h2>Brocoli Sweet Chili: Brócoli, mantequilla de mani, miso, siracha</h2>
             <h2>Sciacciata Aguacate: Palta, Rúcula, Tomates Secos, Brie, Pesto</h2>
             <h2>Ensalada Langostinos: Hojas Verdes, Tomates Secos, Langostinos, Parmesano, Semillas y Emulsion de Acceto</h2>
             <h2>Malfattis: Malfattis de Espinaca, ricota, muzzarella, parmesano, salteados  en tomates cherries y romero</h2>
